my-website/service/cockpit/cockpit.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockpit-service
  namespace: infra
spec:
  ports:
    - name: https
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  name: cockpit-external
  namespace: infra
subsets:
  - addresses:
      - ip: 10.0.0.11   # cockpit 노드 IP
    ports:
      - port: 9090
        name: https
