my-website/service/cockpit/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cockpit
  namespace: infra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`space.lucky-gun.com`)
      kind: Rule
      services:
        - name: cockpit-external
          port: 9090
          scheme: https
          serversTransport: cockpit-transport
      middlewares:
        - name: only-cloudflare
          namespace: traefik
        # 여기에 basicAuth 같은 거 추가 강추
  tls:
    certResolver: myresolver
